--- a/Cafeteira/src/Login.form
+++ b/Cafeteira/src/Login.form
@@ -37,6 +37,7 @@
                       <EmptySpace min="-2" pref="97" max="-2" attributes="0"/>
                       <Component id="senha" min="-2" pref="235" max="-2" attributes="0"/>
                   </Group>
+                  <Component id="voltar" alignment="0" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace pref="105" max="32767" attributes="0"/>
           </Group>
@@ -45,7 +46,8 @@
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="1" attributes="0">
-              <EmptySpace pref="110" max="32767" attributes="0"/>
+              <Component id="voltar" min="-2" max="-2" attributes="0"/>
+              <EmptySpace pref="72" max="32767" attributes="0"/>
               <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="senha" min="-2" pref="32" max="-2" attributes="0"/>
@@ -75,6 +77,14 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Digite sua senha"/>
       </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="voltar">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Voltar"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="voltarActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
